kubernetes/cluster-repository/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app: ingress
  name: ingress
  namespace: cluster-repository
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
    - host: nexus.sourcegrade.org
      http:
        paths:
          - backend:
              service:
                name: nexus
                port:
                  number: 8081
            path: /
            pathType: Prefix
    - host: images.sourcegrade.org
      http:
        paths:
          - backend:
              service:
                name: nexus
                port:
                  number: 9000
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - nexus.sourcegrade.org
        - images.sourcegrade.org
      secretName: letsencrypt-prod
